# fouduvolant-v2

./: .gitignore
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml
backend/crates/app/: Cargo.toml
backend/crates/app/src/: infrastructure.rs  lib.rs
backend/crates/app/src/services/: board.rs  bracket.rs  matches.rs  mod.rs  pools.rs  tournament.rs
backend/crates/app/tests/: integration.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: bracket.rs  generation.rs  ids.rs  lib.rs  matches.rs  projections.rs  scheduling.rs  score.rs  standings.rs  tournament.rs
backend/crates/domain/src/bracket/: aggregate.rs  mod.rs  tests.rs  tree.rs
backend/crates/domain/src/matches/: aggregate.rs  command.rs  event.rs  mod.rs  tests.rs
backend/crates/domain/src/scheduling/: dispatch.rs  mod.rs  tests.rs  types.rs
backend/crates/domain/src/tournament/: aggregate.rs  command.rs  event.rs  mod.rs  tests.rs
backend/crates/web/: Cargo.toml
backend/crates/web/src/: dto.rs  error.rs  handlers.rs  main.rs  router.rs
backend/crates/web/src/handlers/: board.rs  bracket.rs  matches.rs  pool.rs  team.rs  tournament.rs
backend/db/: init.sql
docs/: ARCHITECTURE.md
frontend/: elm.json  index.html  package-lock.json  package.json
frontend/src/: Api.elm  Decoders.elm  Helpers.elm  Main.elm  Types.elm  View.elm
frontend/src/View/: Board.elm  Bracket.elm  Common.elm  List.elm  Pools.elm  Public.elm  Schedule.elm  Standings.elm  Teams.elm
