[package]
name = "domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cqrs-es.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt"] }
