[package]
name = "web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "fouduvolant"
path = "src/main.rs"

[dependencies]
app = { path = "../app" }
domain = { path = "../domain" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
